# musvg

./: CMakeLists.txt  README.md
app/: musvgreader.c  musvgtool.c
src/: mubuf.cc  mubuf.h  mumule.h  musvg.c  musvg.h  muvec.c  muvec.h  vf128.cc  vf128.h
src/sha2/: sha256.c  sha512.c  sha512.h
test/: bench_blake3.c  bench_io.cc  bench_svg.cc  run_profile.sh  run_tests.sh  test_mubuf.c  test_mumule.c  test_muvec.c  test_vfbuf.c
